--- a/index.css
+++ b/index.css
@@ -33,13 +33,33 @@ header #title {
 .nav a {
   text-decoration: none;
   color: black;
-  padding: 1rem;
+  margin-left: 1.5rem;
   font-weight: bold;
   color: rgb(105, 105, 105);
   transition-duration: .5s;
 }
 .nav a:hover{
   color: #ff4d4d;
+}
+.nav a {
+  position: relative;
+}
+.nav a::after {
+  /* display: none; */
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #ff4d4d;
+  transition: width .5s linear;
+  width: 0;
+}
+.nav a:hover::after {
+  width: 100%;
+  background-color: #ff4d4d;
+  display: inline-block;
 }
 .section {
   min-height: 20rem;
