--- a/index.css
+++ b/index.css
@@ -6,10 +6,11 @@
 }
 body {
   min-width: 100vw;
+  font-family: Arial, Helvetica, sans-serif;
 }
 header {
   margin-bottom: 2rem;
-  padding: 0 1rem;
+  padding: 0 2rem;
   position: sticky;
   top: 0;
   box-shadow: 0 2px 20px #dcdde1;
@@ -37,7 +38,7 @@ header #title {
   padding: 1rem 0;
   font-weight: bold;
   color: rgb(105, 105, 105);
-  transition-duration: .5s;
+  transition-duration: .3s;
 }
 .nav a:hover{
   color: #ff4d4d;
@@ -54,7 +55,7 @@ header #title {
   height: 4px;
   border-radius: 2px;
   background-color: #ff4d4d;
-  transition: width .5s linear;
+  transition: width .3s linear;
   width: 0;
 }
 .nav a:hover::after {
