--- a/public/index.css
+++ b/public/index.css
@@ -1,10 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 #root {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  /* min-width: 100vw; */
 }
