--- a/src/pages/Main/index.css
+++ b/src/pages/Main/index.css
@@ -1,6 +1,79 @@
+@font-face {
+	font-family: 'RobotoCondensed Light';
+	src: url('../../static/font/RobotoCondensed-Light-5.ttf') format('woff2');
+}
 main {
+  position: relative;
+  top: -6rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  flex: 1
+  justify-content: flex-start;
+  flex: 1;
+}
+.header-info{
+  position: sticky;
+  top: 0; 
+  width: 100%;
+  height: 6rem;
+  margin-bottom: 1rem;
+  padding: 1rem 2rem;
+  box-shadow: 0 2px 20px #dcdde1;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'RobotoCondensed Light';
+  color: #2f3542;
+  background-color: rgba(255,255,255,0.7);
+              
+}
+.header-info #title {
+  font-weight: bolder;
+  font-size: 40px;
+  min-width: 400px;
+}
+.header-info nav {
+  flex: 1;
+}
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  flex-wrap: nowrap;
+}
+.nav a {
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
+  margin-left: 1.5rem;
+  padding: 1rem 0;
+  transition-duration: .3s;
+}
+.nav a:hover{
+  color: #ff4d4d;
+}
+.nav a {
+  position: relative;
+}
+.nav a::after {
+  /* display: none; */
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 6px;
+  height: 2px;
+  border-radius: 2px;
+  background-color: #ff4d4d;
+  transition: width .3s linear;
+  width: 0;
+}
+.nav .active {
+  color: #ff4d4d;
+}
+.nav .active::after {
+  width: 100%;
+  background-color: #ff4d4d;
+  display: inline-block;
 }
