--- a/src/pages/Main/Member/index.css
+++ b/src/pages/Main/Member/index.css
@@ -1,12 +1,9 @@
 .member {
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .member .avatar {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   margin: 4rem;
 }
@@ -17,6 +14,25 @@
               0 2px 10px #ced6e0,
               0 2px 10px #ced6e0,
               0 2px 10px #ced6e0;
+}
+.member .avatar h2 {
+  position: relative;
+  font-size: 1.2rem;
+  font-weight: normal;
+}
+.member .avatar h2::after {
+  content: 'Ph.D';
+  font-size: 0.6rem;
+  position: absolute;
+  background-color: beige;
+  border-radius: 0.3rem;
+  padding: 2px 4px;
+}
+.information {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 4rem;
 }
 .information h3 {
   color: rgb(149, 149, 149);
