--- a/src/pages/Header/index.css
+++ b/src/pages/Header/index.css
@@ -1,4 +1,4 @@
 .header .header-img {
   height: 20rem;
-  background: url('../../static/background.webp') center/cover no-repeat;
+  background: url('../../static/images/background.webp') center/cover no-repeat;
 }
