--- a/src/pages/Footer/index.css
+++ b/src/pages/Footer/index.css
@@ -1,3 +1,7 @@
+@font-face {
+	font-family: 'Aqum-2';
+	src: url('../../static/font/Aqum-2-Classic-2.otf') format('woff2');
+}
 .footer {
   height: 8rem;
   background-color: rgb(0, 63, 136);
@@ -10,6 +14,8 @@
   width: 16rem;
 }
 .footer h3 {
-  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-family: 'Aqum-2';
+  font-weight: normal;
   color: white;
 }
