--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+@font-face {
+	font-family: 'Helvetica-Neue';
+	src: url('../../../static/font/Helvetica-Neue-2.ttf') format('woff2');
+}
 * {
   margin: 0;
   padding: 0;
@@ -7,4 +11,5 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-family: 'Helvetica-Neue';
 }
