--- a/src/components/Paper.css
+++ b/src/components/Paper.css
@@ -1,18 +1,21 @@
 .title {
-  font-family: 'RobotoCondensed Light';
-  font-size: 1.4rem;
+  color: #333333;
+  font-size: 1.3rem;
+  font-weight: bold;
 }
 .author {
+  font-size: 1rem;
   font-style: italic;
-  color: #596275;
+  /* font-weight: bold; */
+  color: gray;
 }
 .link a{
   margin-right: 3rem;
   font-weight: bold;
-  color: #3c40c6;
+  color: #34ace0;
   text-decoration: none;
   transition: all .5s;
 }
 .link a:hover {
-  color: #4bcffa;
+  color: #227093;
 }
