--- a/src/pages/Main/Publications/index.css
+++ b/src/pages/Main/Publications/index.css
@@ -1,13 +1,13 @@
 .publications {
-  height: 600px;
-  line-height: 2rem;
+  margin: 1rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  line-height: 2rem;
 }
 .publications ul {
   list-style-type: none;
 }
 .publications li{
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
