--- a/src/pages/Main/index.css
+++ b/src/pages/Main/index.css
@@ -6,7 +6,14 @@
 	font-family: 'RobotoCondensed-3';
 	src: url('../../static/font/Roboto-Condensed-3.ttf') format('woff2');
 }
-
+@font-face {
+	font-family: 'Aqum-2';
+	src: url('../../static/font/Aqum-2-Classic-2.otf') format('woff2');
+}
+@font-face {
+	font-family: 'Helvetica-Neue';
+	src: url('../../static/font/Helvetica-Neue-2.ttf') format('woff2');
+}
 main {
   position: relative;
   top: -6rem;
@@ -15,6 +22,7 @@ main {
   align-items: center;
   justify-content: center;
   flex: 1;
+  font-family: 'Helvetica-Neue';
 }
 .header-info{
   position: sticky;
@@ -85,28 +93,17 @@ main {
 }
 /* 路由内容的css */
 .nav-item-title {
-  margin: 4rem;
+  margin: 6rem;
   text-align: center;
+  /* font-family: 'Aqum-2'; */
   font-size: 3rem;
-  font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   color: #ff4d4d;
 }
 .kind-title {
-  /* position: relative;
-  left: 2rem; */
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   font-family: 'RobotoCondensed-3';
   font-size: 2rem;
   font-weight: bold;
   color: #636e72;
 }
-/* .kind-title::before {
-  content: '';
-  position: absolute;
-  left: -2rem;top: 0.5rem;
-  width: 1rem;
-  height: 1rem;
-  background-color: #636e72;
-  transform: rotate(45deg);
-} */
