--- a/public/index.css
+++ b/public/index.css
@@ -7,6 +7,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  margin: 0;
+  padding: 0;
+  /* overflow-x: scroll; */
+}
 #root {
   display: flex;
   flex-direction: column;
