--- a/src/pages/Main/Member/index.css
+++ b/src/pages/Main/Member/index.css
@@ -1,35 +1,120 @@
-.member {
-  display: flex;
-}
-.member .avatar {
+.member-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 4rem;
+  width: 80%;
 }
-.member .avatar img{
-  width: 10rem;
-  border-radius: 50%;
+.outline {
+  position: relative;
+  margin: 5rem 0 ;
+  width: 24rem;
+  color: #636e72;
+  text-align: center;
+}
+.outline span {
+  position: relative;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  padding: .5rem 1rem;
+  background-color: #fff;
+  z-index: -1;
+}
+.outline::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background-color: #636e72;
+  z-index: -1;
+}
+/* leader */
+.leader {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.leader .avatar{
+  margin-right: 4rem;
+  width: 14em;
+  border-radius: 4px;
   box-shadow: 0 2px 10px #ced6e0,
               0 2px 10px #ced6e0,
               0 2px 10px #ced6e0,
               0 2px 10px #ced6e0;
 }
-.member .avatar h2 {
-  position: relative;
-  font-size: 1.2rem;
-  font-weight: normal;
-}
-.information {
+
+.leader .info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin: 4rem;
 }
-.information h3 {
-  color: rgb(149, 149, 149);
+.leader .info-piece {
+  color: #485460;
 }
-.information .research {
-  font-weight: normal;
-  color: black;
+.leader .name {
+  flex: 1;
+  margin: 1rem 0;
+  font-size: 1.4rem;
+  font-weight: bolder;
+  color: #2f3542;
+}
+.leader .info .main-research {
+  margin-top: 2rem;
+}
+.leader .info .main-research span {
+  color: #57606f;
+}
+.leader .info .main-research .filed {
+  padding-top: .5rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+  font-family: 'LinLibertine-R-1';
+  color: #1e272e;
+}
+/* members */
+.group-members {
+  width: 100%;
+}
+.group-members .member-item{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: 1px solid #ced6e0;
+}
+.group-members .member-name {
+  margin-right: 4rem;
+  padding: 1rem 0;
+  width: 14rem;
+  border-radius: 4px;
+  font-size: 1.4rem;
+  font-weight: bolder;
+  color: #2f3542;
+}
+.group-members .status {
+  color: #636e72;
+}
+.group-members .email {
+  color: #747d8c;
+}
+
+/* 移动端适配 */
+@media screen and (max-width: 600px) {
+  .leader {
+    flex-direction: column;
+    align-items: center;
+  }
+  .leader .avatar {
+    margin-right: 0;
+  }
+  .leader .info {
+    align-items: center;
+  }
+
+  .group-members .member-item{
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
