--- a/src/pages/Main/Publications/index.css
+++ b/src/pages/Main/Publications/index.css
@@ -1,4 +1,5 @@
 .publications {
+  width: 70%;
   margin: 1rem 0;
   display: flex;
   flex-direction: column;
@@ -7,7 +8,14 @@
 }
 .publications ul {
   list-style-type: none;
+  margin-bottom: 1.5rem;
 }
 .publications li{
-  margin-bottom: 3rem;
+  margin-bottom: 1.2rem;
+}
+@media screen and (max-width: 600px) {
+  .publications {
+    width: 100%;
+    margin: 1rem;
+  }
 }
